Completed draft version.

--- a/tip/477.md
+++ b/tip/477.md
@@ -1,6 +1,6 @@
 # TIP 477: Modernize the nmake build system
 	Author:         Ashok P. Nadkarni <apnmbx-wits@yahoo.com>
-	State:          WIP
+	State:          Draft
 	Type:           Process
 	Vote:           Pending
 	Created:        30-Sep-2017
@@ -19,7 +19,7 @@
         * <a href='#toc-10'>Directory paths `INSTALLDIR`, `TMP_DIR`, `OUT_DIR`</a>
         * <a href='#toc-11'>The `OPTS` macro</a>
         * <a href='#toc-12'>The `STATS` macro</a>
-        * <a href='#toc-13'>The `CHECKS` macro`</a>
+        * <a href='#toc-13'>The `CHECKS` macro</a>
         * <a href='#toc-14'>The `TESTPAT` macro</a>
 * <a href='#toc-15'>Basic makefiles</a>
     * <a href='#toc-16'>Makefile for a basic Tcl extension</a>
@@ -53,7 +53,7 @@
     * <a href='#toc-44'>Stubs</a>
         * <a href='#toc-45'>Linking with Tcl and Tk stubs libraries</a>
         * <a href='#toc-46'>Generating extension stubs libraries</a>
-    * <a href='#toc-47'>Versioning</a>
+    * <a href='#toc-47'>Version macros</a>
     * <a href='#toc-48'>Installation</a>
     * <a href='#toc-49'>Manifests</a>
     * <a href='#toc-50'>Documentation and demos</a>
@@ -100,7 +100,7 @@ options.
 
 ## <a id='toc-4'></a>Simplifying extension makefiles
 
-In addition, creating a `makefile.vc` for even a simple extension
+Creating a `makefile.vc` for even a simple extension
 involves a lot of unnecessary boilerplate leading to
 copy-n-paste-itis and attendant problems. 
 This TIP aims to simplify the writing of extension
@@ -118,9 +118,9 @@ The following makefile should suffice for the majority of extensions.
 	pkgindex: default-pkgindex
 
 (In contrast, the current makefile for the sample extension is
-of the order of **300** lines, excluding comments.)
+of the order of **300** lines, exclusive of comments.)
 
-Outside of the makefile itself,
+In addition to simplification of the makefile itself,
 the TIP also proposes removing the burden from the extension
 author of having to write their own Windows version resource file, 
 `pkgIndex.tcl` and other common boilerplate.
@@ -133,8 +133,8 @@ customizable using standard "building block" macros.
 In principle, `rules.mk` and `nmakehlp.c` should be shared across Tcl,
 Tk and all extensions. In practice, each has its own copy leading to
 divergence between the various copies and the resulting maintenance
-headaches. Currently, in the 
-author found every single extension, including Tk, had diverged from
+headaches. At the time of writing, 
+every single extension, including Tk, had diverged from
 Tcl. This means updates for new compilers, changes in Tcl build
 configuration (e.g. -DUNICODE) do not make their way into extensions.
 Moreover, making fixes involves individually fixing extensions, some
@@ -158,8 +158,8 @@ important extensions like Tk and Sqlite, differing floating point
 conformance options in debug and release builds even within Tcl and so
 on.
 
-Therefore, *a standard set of documented `nmake` macros are defined to
-ensure consistency across build configurations*.
+Therefore, a standard set of documented `nmake` macros are defined to
+ensure consistency across build configurations.
 
 ## <a id='toc-7'></a>Non-goals
 
@@ -172,7 +172,7 @@ The nmake build system is not intended to be "compatible" with the TEA
 based system. For example, the generated libraries may not link with
 those generated from the other system. Of course, the built extensions
 should run with Tcl compiled from any compiler if stubs are
-enabled. At the same time, the nmake-ng system does make some minimal
+enabled. At the same time, the modernized nmake system does make some minimal
 integration with TEA so that configuration values such as version
 numbers, `pkgIndex.tcl.in` etc. only need to be defined in one place.
 
@@ -184,7 +184,7 @@ are not addressed.
 
 There will be no changes to the command line interface used to build
 Tcl and extensions using nmake except for removal of some obsolete
-features.
+options and some minor additions.
 
     nmake /f makefile.vc ?targets? ?macros? 
 
@@ -246,7 +246,9 @@ Option | Effect
 `profile`|Produces an image that can be used with the Windows Performance Tools profiler.
 `pgi`|Instruments the image for profile guided optimization.
 `pgo`|Enables profile guided optimization.
+`nostubs`|Specifies that extensions should not link against the Tcl stubs library.
 `unchecked`|Links the debug build when `symbols` is specified against the non-debug runtime.
+`noconfigchecks`|Disables the checks that ensure that an extension build options are compatible with those of the Tcl against which it is being built.
 
 The `msvcrt` and `nomsvcrt` options control which C runtime library is
 passed to the link step. By default, shared library builds of Tcl link
@@ -269,7 +271,7 @@ Option|Effect
 `memdbg`|Enables instrumentation of memory allocation.
 `compdbg`|Enables byte compiler logging for debugging purposes.
 
-### <a id='toc-13'></a>The `CHECKS` macro`
+### <a id='toc-13'></a>The `CHECKS` macro
 
 The `CHECKS` macro configure additional compiler checks and warnings.
 
@@ -954,6 +956,7 @@ requisite commands. These are shown in the table below.
 >
 Target|Description
 ------|-----------
+`default-test`|Runs the extension test suite assuming the script `all.tcl` in `$(TESTDIR)`
 `default-pkgindex`|Generates a `pkgIndex.tcl` file for a pure binary extension in the output directory.
 `default-pkgindex-tea`|Generates a `pkgIndex.tcl` file in the output directory using a TEA `pkgIndex.tcl.in` file as a template.
 `default-install`|Combines `default-install-binaries` and `default-install-libraries`.
@@ -987,7 +990,7 @@ Target|Description
 `hose`|Maps to `default-hose`.
 `realclean`|Same as `hose`.
 `distclean`|Maps to `default-distclean`.
-`test`|Runs the extension test suite assuming the script `all.tcl` in `$(TESTDIR)`
+`test`|Maps to `default-test`.
 `shell`|Starts a Tcl shell with the built extension's path added to `auto_path`.
 
 ### <a id='toc-42'></a>Extending targets
@@ -1064,7 +1067,7 @@ a corresponding stubs library for the extension with the name
 `$(PROJECT)$(VERSION).lib` and place it in the `$(OUT_DIR)` 
 directory. See the `tdom` extension for an example.
 
-## <a id='toc-47'></a>Versioning
+## <a id='toc-47'></a>Version macros
 
 By default, the nmake build determines the version of the extension by 
 looking for a TEA `configure.in` or `configure.ac` file in extension's 
@@ -1088,7 +1091,11 @@ After including `rules-ext.vc` the `DOTVERSION` and `VERSION` macros
 are guaranteed to be defined. The latter is the `DOTVERSION` value
 with all periods removed.
 
-TBD - Tcl and Tk version macros
+If required, extension makefiles can access the Tcl and Tk versions
+against which the extension is being built through the `TCL_VERSION`,
+`TCL_MAJOR_VERSION`, `TCL_MINOR_VERSION`, `TCL_PATCH_LEVEL`,
+`TK_VERSION`, `TK_MAJOR_VERSION`, `TK_MINOR_VERSION` and
+`TK_PATCH_LEVEL` macros.
 
 ## <a id='toc-48'></a>Installation
 
@@ -1136,11 +1143,32 @@ included through the `default-install-demos`,
 
 ## <a id='toc-51'></a>Utility macros
 
-TBD
+The `rules.vc` file defines some utility macros to use as commands
+that operate on the file system.
+
+Macro|Description
+-----|-----------
+`RMDIR`|Deletes a directory and all its content.
+`MKDIR`|Creates a directory if it does not exist.
+`COPY`|Copies a file.
+`CPY`|Copies one or more files.
+`COPYDIR`|Recursively copies a directory.
+
 
 ## <a id='toc-52'></a>Sanity checking build configuration
 
-TBD 
+In general, it is recommended that extensions be built with the same
+configuration options as the Tcl it is being built against. For
+example, if the Tcl is linked against the debug C runtime, it is
+recommended that the extension also be linked against the debug
+runtime. For this purpose, a file `tcl.nmake` containing the relevant
+Tcl build options is created in the `lib\nmake` directory under the
+Tcl install. When compiling an extension, these options are checked
+against the build options specified for the extensions and warnings
+printed on incompatibilities.
+
+These checks can be disabled by including `noconfigcheck` as one of
+the values passed through the `OPTS` macro on the command line.
 
 # <a id='toc-53'></a>Reference implementation
 
@@ -1152,6 +1180,20 @@ In addition to Tcl and Tk, the `sampleextension`, `thread`, `tclvfs`,
 
 The aforementioned extensions may be used as examples of makefiles of
 varying degrees of complexity.
+
+* The `sampleextension` extension illustrates a basic, minimal makefile.
+
+* The `tclvfs` extension is an example that needs Tcl sources, makes
+use of the TEA `pkgIndex.tcl.in` file and installs man pages.
+
+* The `tdom` extension illustrates handling additional source
+directories, optional extra libraries, building the extension's own
+stubs file and generating a custom `pkgIndex.tcl`.
+
+* The `tktreectrl` extension is an example of a Tk extension.
+
+For examples of defining custom targets and direct use of the build
+macros, see the makefiles for Tcl and Tk themselves.
 
 ## <a id='toc-55'></a>Incompatible changes
 
