Update the specification for tip#479 to include details on the core patch implementation

--- a/tip/479.md
+++ b/tip/479.md
@@ -32,12 +32,40 @@ they at no time feed a script with local variables.
 
 # Specification
 
-This TIP calls for a new command, provisionally named **@proc**. _@proc_ will
-accept the same number of arguments as _proc_, but the format for the argument
-spec will be a dict instead of a list. The fields in the dict will be the name
-of a local variable that the argument will populate, if given. The value will be
-a key/value list of options that tailor how the argument parser treats that
-incoming value (or lack of value.)
+Currently if the last parameter named *args* is given a default value, that information
+is essentially ignored by the workings inside of tclProc.c. This spec calls for storing
+a dict stored where a default would go for the args parameter. Each key in the dict
+will be the name of a local variable that the parameter will populate. The values in the
+dict wil be a key/value set of configuration option for the named parameter system.
+
+Developers can specify if a named parameter has a default if not given. They can also
+specify if the parameter is required. A non-mandatory parameter will not be mapped to
+a local variable, but it is understood that developers may want to advertise their
+presence for documentation purposes.
+
+		proc foo {{{args {
+		   bar {default baz}
+		}}}} {
+		   puts $bar
+		}
+		% foo
+		> baz
+		% foo bar bing
+		> bing
+
+The primary use case for this tip are new functions that take only named parameters. This
+TIP also calls for the creation of a new command, provisionally named *@proc*. _@proc_
+will accept the same number of arguments as _proc_, but the format for the argument
+spec will be a dict instead of a list. For TclOO methods, we will also create an
+@method as a shortcut to:
+
+		oo::define myclass method namemethod {{{args {
+		   bar {default baz}
+		}}}} { ... }
+
+The workings of @proc and @method are essentially:
+
+		proc @proc {name argspec body} { proc $name [list [list args $argspec]] $body }
 
 Named parameters are designed to be deliverable in any order. Named parameters
 can also be omitted. As such it is necessary to provide more introspection than the
@@ -83,23 +111,9 @@ The following general rules apply to all values given in the configuration dict 
 a named parameter.
 
 1. If a value for any option is given as an empty string, it is inferred to be null.
-2. The value for the *variable* option will be the name of the parameter unless set.
+2. A variable will be created with the same name as the named parameter.
 3. A field that is given, but not otherwise reserved by the spec, is ignored by the parser but made available for introspection via the **@spec** dictionary.
 4. If the same option is given multiple times, the last value is the one that will be used. (Similar to \[dict merge\]).
-
-### variable
-Type: Variable name
-Default: null
-
-If given, instead of creating a local variable matching the name of the named parameter,
-create a variable named **$variable** containing the value provided in the call.
-Example:
-
-		% @proc u {
-		  a { variable A }
-		} {
-		  puts $A
-		}
 
 ### mandatory
 Type: boolean
@@ -162,17 +176,6 @@ Options: null, boolean, integer, wide, entier, double
 To support [tip#480](https://core.tcl.tk/tips/doc/trunk/tip/480.md). For now strictly advisory.
 In the future this will check that the incoming values are the specified type.
 
-# Option - Backfit into the existing **proc** command
-
-Because named **args** need to follow positional arguments, it is possible to backfit this
-technique into the existing proc command by modifying to the **args** facility to accept an argspec.
-
-		% proc p {{a {}} {args {b {default {}}}}} { return [list a: $a b: $b {*}$args] }
-		% p
-		a: {} b: {}
-		% p foo bar
-		a: {} b: {} foo bar
-
 # Implementation
 
 This TIP will be rolled out in 3 stages.
@@ -205,22 +208,45 @@ To build the extension:
 
 ## State 3 - Core patch
 
-Stage 3 will introduce named parameters as a feature of the core. An additional field will
-be added to the Proc data structure which, when non-null, will indicate that this
-procedure has named arguments. This data structure will also contain the information
-required to enforce the rules for the named arguments.
+Stage 3 will introduce named parameters as a feature of the core. Modifications
+have been checked into the Tcl core as the tip479 branch.
 
-The **@proc** c implementation will populate this named parameters data structure
-for all calls, and provide a *args* for the argument pointer accessed by
-standard procs. The rules for named parameters will be expressed in the InitArgsAndLocals() function.
+At present if the last positional argument is named *args* a default value
+for that field, while recorded, is ignored. We will utilize that space to
+overload what arguments the procedure will accept beyond the positional arguments.
 
-For TclOO, The **@method** method in TclOO will also populate this data structure.
+Within tclProc.c are modifications to read that argument spec (if given).
 
-## State 4 - Change behaviors of **proc** and **::oo::class method**
+### TclCreateProc
 
-At stage 4 we will modify the **proc** command behavior and **::oo::class method** behavior.
-To do this we will modify the TclCreateCommand() function to populate the named arguments data structure
-in cases where the final argument is **args** with an argspec.
+In TclCreateProc, if an named argument spec was registered for the function, additional
+*localPtr* entries are registered beyond *args* to hold the expected values added by
+the spec.
+
+### ProcWrongNumArgs
+
+In ProcWrongNumArgs, the contents of the argument spec are reported instead of ?args ?
+if an argument spec was registered for that proc.
+
+### InitResolvedLocals
+
+In InitResolvedLocals, we modify the loop to also resolve variables in the compiledLocals
+beyond the numArgs.
+
+### InitArgsAndLocals
+
+During standard argument processing, the function notes if the procedure has a
+named argument spec registered. If a spec was present, after it performs its
+normal population of local variable matching the parameters for the procedure,
+the function calls *ProcEatArgs* which pairs key/value pairs beyond the last positional
+parameter with registered name parameters (and their associated local variable.
+
+### init.tcl
+
+Two macros for @proc and @method are placed in the init.tcl file to
+ensure those facilities are present at runtime. The community is presently
+in a debate as to whether seperate commands are the best approach, or modifying
+proc and oo::define::method to accept flags is better.
 
 # Performance
 
@@ -232,6 +258,9 @@ The most up to date metrics are posted to:
 Long story short, for the C implementation, processing arguments using the @args mechanic is faster
 than performing \[dict with args {}\]. An equivilent proc with positional arguments is still
 slightly faster.
+
+The core implementation is faster than the C implementation, without introducing any
+slowdown for conventional procs.
 
 The code to produces the benchmarks is included in the code repository:
 
@@ -292,3 +321,10 @@ does not prohibit storing additional properties. Consider:
       }
     }
 
+# Spec Revisions
+
+2017-10-28 - Removed the *variable* option. The core implementation really needs
+a canonical name for the variable in the index. If a user really wants a different
+name in the arguments, we have the aliases facility. Also clarified that this
+tip will be modifying how a default for the args parameter is interpreter and
+that @procs and @method are just convenience wrappers.
