--- a/tip/479.md
+++ b/tip/479.md
@@ -1,4 +1,4 @@
-# TIP 479: Add Named Procedures as a New Command in Tcl (@proc)
+# TIP 479: Dict-Based Named Procedures in Tcl
 	Author:         Sean Woods <yoda@etoyoc.com>
 	State:          Draft
 	Type:           Project
