Re-Renamed tip 479

--- a/tip/479.md
+++ b/tip/479.md
@@ -1,4 +1,4 @@
-# TIP 479: Dict-Based Named Procedures in Tcl
+# TIP 479: Dict-Based Named Parameters in Tcl
 	Author:         Sean Woods <yoda@etoyoc.com>
 	State:          Draft
 	Type:           Project
