CFV in progress

--- a/tip/114.md
+++ b/tip/114.md
@@ -3,7 +3,7 @@
 	Created:        16-Oct-2007
 	Type:           Project
 	State:          Draft
-	Vote:           Done
+	Vote:           In progress
 	Tcl-Version:    9.0
 	Post-History:   
 	Keywords:       octal
