--- a/tip/278.md
+++ b/tip/278.md
@@ -5,7 +5,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        03-Oct-2006
 	Post-History:   
 	Tcl-Version:    9.0
