--- a/tip/345.md
+++ b/tip/345.md
@@ -2,7 +2,7 @@
 	Author:         Alexandre Ferrieux <alexandre.ferrieux@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        05-Feb-2009
 	Post-History:   
 	Keywords:       Tcl,encoding,invalid UTF-8
