--- a/tip/479.md
+++ b/tip/479.md
@@ -1,4 +1,4 @@
-# TIP 479: Dict-Based Named Parameters in Tcl
+# TIP 479: Add Named Procedures as a New Command in Tcl (procx)
 	Author:         Sean Woods <yoda@etoyoc.com>
 	State:          Draft
 	Type:           Project
@@ -44,7 +44,7 @@ a local variable, but it is understood that developers may want to advertise the
 presence for documentation purposes.
 
 		proc foo {{{args {
-		   bar {default baz}
+		   bar {default: baz}
 		}}}} {
 		   puts $bar
 		}
@@ -54,18 +54,18 @@ presence for documentation purposes.
 		> bing
 
 The primary use case for this tip are new functions that take only named parameters. This
-TIP also calls for the creation of a new command, provisionally named *@proc*. _@proc_
+TIP also calls for the creation of a new command, provisionally named *procx*. _procx_
 will accept the same number of arguments as _proc_, but the format for the argument
 spec will be a dict instead of a list. For TclOO methods, we will also create an
-@method as a shortcut to:
+methodx as a shortcut to:
 
 		oo::define myclass method namemethod {{{args {
-		   bar {default baz}
+		   bar {default: baz}
 		}}}} { ... }
 
-The workings of @proc and @method are essentially:
+The workings of procx and methodx are essentially:
 
-		proc @proc {name argspec body} { proc $name [list [list args $argspec]] $body }
+		proc procx {name argspec body} { proc $name [list [list args $argspec]] $body }
 
 Named parameters are designed to be deliverable in any order. Named parameters
 can also be omitted. As such it is necessary to provide more introspection than the
@@ -73,9 +73,9 @@ current incarnation of **proc** provides. If the procedure requires
 more than the default behavior or populating local variables with the argumemnt given,
 it can introspect with **$args** with **\[dict exists\]** to detect if an argument was
 given at all. The argument spec that was given by the developer will also be available
-as the local variable **@spec**.
+as the local variable **argspec**.
 
-		% @proc p {a {default {}}} { return $args }
+		% procx p {a {default: {}}} { return $args }
 		% p
 		a {}
 		% p foo bar
@@ -85,11 +85,11 @@ Given these rules, we can get into non-intuitive failures. For instance, what wo
 happen if a default value was not provided for an argument, and the command call
 does not provide one.
 
-		% @proc q {a {default {}} b {}} {
+		% procx q {a {default: {}} b {}} {
 		  # Proc assumes b will be given
 		  set result [list $a $b]
 		  foreach {f v} $args {
-		    if {$item ni [dict keys ${@spec}]} {
+		    if {$item ni [dict keys ${argspec}]} {
 		       lappend result $item [dict get $args $item]
 		    }
 		  }
@@ -112,16 +112,16 @@ a named parameter.
 
 1. If a value for any option is given as an empty string, it is inferred to be null.
 2. A variable will be created with the same name as the named parameter.
-3. A field that is given, but not otherwise reserved by the spec, is ignored by the parser but made available for introspection via the **@spec** dictionary.
+3. A field that is given, but not otherwise reserved by the spec, is ignored by the parser but made available for introspection via the **argspec** dictionary.
 4. If the same option is given multiple times, the last value is the one that will be used. (Similar to \[dict merge\]).
 
-### mandatory
+### mandatory:
 Type: boolean
 Default: true
 
 Set to false if **default** given. If true, throw an error if the named parameter is not given.
 
-### default
+### default:
 Type: value
 Default: null
 
@@ -129,8 +129,8 @@ When non-null, if a named parameter is missing from the call assume the value sp
 
 Example:
 
-		% @proc u {
-		  a { default {A useful value} }
+		% procx u {
+		  a { default: {A useful value} }
 		} {
 		  puts $a
 		}
@@ -139,7 +139,7 @@ Example:
 		% u a {Less usefull}
 		> Less usefull
 
-### aliases
+### aliases:
 Type: list
 Default: null
 
@@ -151,10 +151,10 @@ the following rules apply to aliases:
 
 Example:
 
-		% @proc u {
+		% procx u {
 		  a {
-		    default {A useful value}
-		    aliases {alpha A}
+		    default: {A useful value}
+		    aliases: {alpha A}
 		  }
 		} {
 		  puts [list $a $args]
@@ -168,7 +168,7 @@ Example:
 		% u a {Don't be pedantic} alpha {Less usefull}
 		> {Don't be pedanditic} {a {Don't be pedantic} alpha {Less usefull}}
 
-### type
+### type:
 Type: string
 Default: null
 Options: null, boolean, integer, wide, entier, double
@@ -184,8 +184,8 @@ This TIP will be rolled out in 3 stages.
 
 Stage 1 is a pure-tcl implementation to allow the community to try out the rules and
 see if this new concept is a good fit for Tcl. The implementation will use a macro-like
-template to place the implementation rules as a pre-amble to the body given to @proc or
-@method. This implementation will affect line numbers in traces, but should provide
+template to place the implementation rules as a pre-amble to the body given to procx or
+methodx. This implementation will affect line numbers in traces, but should provide
 the new features without introducing a major impact on performance.
 
 This implementation has been posted to the http://wiki.tcl.tk/49071 and will be kept up
@@ -194,8 +194,8 @@ to date.
 ## State 2 - C Extension (finished)
 
 Stage 2 will be a standalone TEA extension compatible with Tcl 8.6. In this implementation
-a C API call will create a command **@args** which will take as input the parameter specs
-for the proc and the value of the args variable. The @args command will then provide the
+a C API call will create a command **argsx** which will take as input the parameter specs
+for the proc and the value of the args variable. The argsx command will then provide the
 local variables for this tip's rules prior to passing control to the user's body.
 
 To build the extension:
@@ -243,10 +243,15 @@ parameter with registered name parameters (and their associated local variable.
 
 ### init.tcl
 
-Two macros for @proc and @method are placed in the init.tcl file to
+Two macros for procx and methodx are placed in the init.tcl file to
 ensure those facilities are present at runtime. The community is presently
 in a debate as to whether seperate commands are the best approach, or modifying
 proc and oo::define::method to accept flags is better.
+
+### info argspec
+
+In the info namespace, add an *argspec* command to return the named argument spec for
+a command
 
 # Performance
 
@@ -255,7 +260,7 @@ The most up to date metrics are posted to:
 
 <http://fossil.etoyoc.com/fossil/tip479/doc/trunk/performance.txt>
 
-Long story short, for the C implementation, processing arguments using the @args mechanic is faster
+Long story short, for the C implementation, processing arguments using the argsx mechanic is faster
 than performing \[dict with args {}\]. An equivilent proc with positional arguments is still
 slightly faster.
 
@@ -272,22 +277,22 @@ While this tip addresses the design patterns of proc definitions.
 
 ## Arguments for ensemble-like procs
 
-The @args command is available for use at any place within Tcl, not just at the top
+The argsx command is available for use at any place within Tcl, not just at the top
 of a command. Consider:
 
     proc myensemble {command args} {
       switch $command {
         smtp {
            # Dicts can be created on the fly
-           @args [dict create from {} to {} mtime [dict create default [clock seconds]]] $args
+           argsx [dict create from {} to {} mtime [dict create default: [clock seconds]]] $args
            smtp::dispatch $from $do mtime $mtime
          }
          http {
            # Or accept a static string with whitespace
-           @args {
+           argsx {
               from {}
               to {}
-              url {default http://mydomain.info}
+              url {default: http://mydomain.info}
            } $args
            http::post ${url}?from=${from}&to=${to}
          }
@@ -299,19 +304,19 @@ of a command. Consider:
 The standard only defines the behavior for several properties for parameters, but
 does not prohibit storing additional properties. Consider:
 
-    @proc prettyproc {
+    procx prettyproc {
       color {
-        comment {Color of the button}
-        type color
-        default green
+        comment: {Color of the button}
+        type: color
+        default: green
       }
       flavor {
-        comment {What flavor candy emerges when pressed.}
-        default random
-        options {vanilla caramel chocolate strawberry}
+        comment: {What flavor candy emerges when pressed.}
+        default: random
+        options: {vanilla caramel chocolate strawberry}
       }
     } {
-       set flavors  [dict get ${@spec} flavor options]
+       set flavors  [dict get [info argspec prettyproc] flavor options:]
        if {$flavor eq "random"} {
          set flavor [lrandom $flavors]
        } else {
@@ -323,8 +328,11 @@ does not prohibit storing additional properties. Consider:
 
 # Spec Revisions
 
+2017-11-03 - Renamed @proc to procx, @args to argsx and @method to methodx. Removed
+the internal variable @spec from bodies. Added
+
 2017-10-28 - Removed the *variable* option. The core implementation really needs
 a canonical name for the variable in the index. If a user really wants a different
 name in the arguments, we have the aliases facility. Also clarified that this
 tip will be modifying how a default for the args parameter is interpreter and
-that @procs and @method are just convenience wrappers.
+that procxs and methodx are just convenience wrappers.
