Marking tips 114, 278 and 345 as Final with Voting done

--- a/tip/114.md
+++ b/tip/114.md
@@ -2,10 +2,11 @@
 	Author:         Don Porter <dgp@users.sf.net>
 	Created:        16-Oct-2007
 	Type:           Project
-	State:          Draft
-	Vote:           In progress
+	State:          Final
+	Vote:           Done
 	Tcl-Version:    9.0
-	Post-History:   
+        Discussions-To: Tcl Core list
+	Post-History:
 	Keywords:       octal
 -----
 
@@ -179,7 +180,7 @@ we have is the thread, so the mode has to be set thread-wide.
 
 Likewise, the \(hopefully rare\) set of scripts that would actually
 want to turn octal parsing back on are not going to announce themselves.
-In order to know that 
+In order to know that
 
 	 tcl::unsupported::octal on
 
