--- a/tip/278.md
+++ b/tip/278.md
@@ -3,11 +3,12 @@
 	Author:         Miguel Sofer <msofer@users.sf.net>
 	Author:         Kevin Kenny <kennykb@acm.org>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        03-Oct-2006
-	Post-History:   
+	Post-History:
+	Discussions To: Tcl Core List
 	Tcl-Version:    9.0
 -----
 
@@ -32,7 +33,7 @@ resolution.
 
 Variable name resolution shall proceed as follows:
 
-   * a simple name refers to a local variable if within a proc body, to a variable resolved [*] in the current namespace otherwise 
+   * a simple name refers to a local variable if within a proc body, to a variable resolved [*] in the current namespace otherwise
 
    * an absolute name does not need resolving, ::foo::bar::baz always refers to a variable named "baz" in a namespace
 named "bar" that is a child of a namespace named "foo" that is a child
@@ -57,7 +58,7 @@ unnecessary. In short:
 
 These are the same rules as presently used for the resolution of namespace names.
 
-[*] Currently there are hooks in the core for special resolvers that can be attached to a namespace or interpreter, mainly \(only?\) used by itcl. The present TIP does not address resolvers, except for the specification that an absolute name ignores them. The rule that a simple name in a proc-body always refers to a local variable is not new in that sense, as any resolver hooks in that case create local variables linked to some other vars, in the manner of upvar. 
+[*] Currently there are hooks in the core for special resolvers that can be attached to a namespace or interpreter, mainly \(only?\) used by itcl. The present TIP does not address resolvers, except for the specification that an absolute name ignores them. The rule that a simple name in a proc-body always refers to a local variable is not new in that sense, as any resolver hooks in that case create local variables linked to some other vars, in the manner of upvar.
 
 # Rationale: avoid confusion
 
@@ -89,14 +90,14 @@ as well as following examples:
 	   1
 	   % set a::x
 	   can't read "a::x": no such variable
-	
+
 	   % namespace eval b {upvar #0 x y}
 	   % info vars x
 	   % namespace eval a set x 1
 	   1
 	   % set x
 	   1
-	
+
 	   % namespace eval a set x
 	   can't read "x": no such variable
 	   % set x 1
@@ -106,7 +107,7 @@ as well as following examples:
 	   % upvar 0 ::a::x y
 	   % namespace eval a set x
 	   can't read "x": no such variable
-	
+
 	   % namespace eval a set x
 	   can't read "x": no such variable
 	   % set x 1
@@ -116,7 +117,7 @@ as well as following examples:
 	   % trace add variable a::x read {;#}
 	   % namespace eval a set x
 	   can't read "x": no such variable
-	
+
 	   % set x 1
 	   1
 	   % namespace eval a {set x 2; set y 3}
@@ -157,7 +158,7 @@ been declared via [variable].
 Some of the problems inherent in the current way of things are illustrated by
 Bugs 959052, 1251123, 1274916, 1274918, 1280497
 
-Bug 1185933 is perhaps particularly illustrative. In it, 
+Bug 1185933 is perhaps particularly illustrative. In it,
 Kevin Kenny <kennykb@acm.org>, a long-time
 Tcl maintainer \(and reputed expert\) had placed in 'clock.tcl' the
 group of lines:
@@ -176,7 +177,7 @@ the [clock] command.  This case was also inordinately difficult
 to simulate in the test suite, because tcltest reads the clock
 as part of its initialization.  The fix was to move the offending
 code from the [namespace eval] into an 'init' procedure \(which
-was called once and then deleted via [rename]\).  
+was called once and then deleted via [rename]\).
 
 # Side Benefit: Code Simplification, Performance
 
@@ -206,7 +207,7 @@ one program \(AlphaTk, see below\).
 ## AlphaTk breakage
 
 AlphaTk breaks with this change
-<http://aspn.activestate.com/ASPN/Mail/Message/Tcl-core/2083396> 
+<http://aspn.activestate.com/ASPN/Mail/Message/Tcl-core/2083396>
 <http://sf.net/tracker/?func=detail&aid=959786&group_id=10894&atid=110894> .
 
 This is the result of code of the form
