--- a/tip/345.md
+++ b/tip/345.md
@@ -1,10 +1,11 @@
 # TIP 345: Kill the 'identity' Encoding
 	Author:         Alexandre Ferrieux <alexandre.ferrieux@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Complete
 	Created:        05-Feb-2009
-	Post-History:   
+	Post-History:
+	Discussions-To: Tcl Core List
 	Keywords:       Tcl,encoding,invalid UTF-8
 	Tcl-Version:    8.7
 -----
@@ -38,7 +39,7 @@ has only ever been documented in tcltest.
 
 # Reference Example
 
-See Bug 2564363 <https://sourceforge.net/support/tracker.php?aid=2564363> 
+See Bug 2564363 <https://sourceforge.net/support/tracker.php?aid=2564363>
 
 # Copyright
 
