Marking 114 and 278 as "Accepted" not "Final". Updating the table of contents.

--- a/tip/278.md
+++ b/tip/278.md
@@ -3,7 +3,7 @@
 	Author:         Miguel Sofer <msofer@users.sf.net>
 	Author:         Kevin Kenny <kennykb@acm.org>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Final
+	State:          Accepted
 	Type:           Project
 	Vote:           Done
 	Created:        03-Oct-2006
