Update TIP #161: Change Default for Menu's -tearoff Option to False. Add pointer to implementation, and note that this was already done 13 years ago for OS X (only).

--- a/tip/161.md
+++ b/tip/161.md
@@ -1,5 +1,6 @@
 # TIP 161: Change Default for Menu's -tearoff Option to False
 	Author:         Mark Roseman <mark@markroseman.com>
+	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
@@ -35,6 +36,10 @@ Implementation of this TIP requires only changing a single default in
 each of the platform specific _tk\*Default.h_ files, and updating the
 documentation and test cases.
 
+Note that this change was already done in Nov. 2004, on OS X only, by
+https://core.tcl.tk/tk/info/2cb92ba546de97e1
+Indeed on OS X menues cannot be torn off.
+
 # Compatibility
 
 Unfortunately, entries in menus are often accessed by index within
@@ -45,6 +50,11 @@ straightforward \(either through adjusting access to individual menus,
 or using the option database to turn the tearoff option back on\),
 because of the incompatibility this TIP is proposed for 9.0 rather
 than 8.x.
+
+# Implementation
+
+See branch tip-161:
+https://core.tcl.tk/tk/timeline?r=tip-161
 
 # Copyright
 
