--- a/tip/161.md
+++ b/tip/161.md
@@ -37,7 +37,9 @@ each of the platform specific _tk\*Default.h_ files, and updating the
 documentation and test cases.
 
 Note that this change was already done in Nov. 2004, on OS X only, by
+
 https://core.tcl.tk/tk/info/2cb92ba546de97e1
+
 Indeed on OS X menues cannot be torn off.
 
 # Compatibility
@@ -51,9 +53,26 @@ or using the option database to turn the tearoff option back on\),
 because of the incompatibility this TIP is proposed for 9.0 rather
 than 8.x.
 
+# Example
+
+The following script returns 1, but will return 0 after implementation
+of this TIP:
+
+	  package require Tk
+	  
+	  menu .m
+	  .m add cascade -label File -menu .m.file
+	  menu .m.file
+	  .m.file add command -label Item_1
+	  . configure -menu .m
+	  
+	  puts "Item_1 is item number [.m.file index Item_1]"
+
+
 # Implementation
 
 See branch tip-161:
+
 https://core.tcl.tk/tk/timeline?r=tip-161
 
 # Copyright
