Mark implemented TIPs as Final

--- a/tip/114.md
+++ b/tip/114.md
@@ -2,7 +2,7 @@
 	Author:          Don Porter <dgp@users.sf.net>
 	Created:         16-Oct-2007
 	Type:            Project
-	State:           Accepted
+	State:           Final
 	Vote:            Done
 	Tcl-Version:     9.0
 	Discussions-To:  Tcl Core list
