--- a/tip/345.md
+++ b/tip/345.md
@@ -2,7 +2,7 @@
 	Author:         Alexandre Ferrieux <alexandre.ferrieux@gmail.com>
 	State:          Final
 	Type:           Project
-	Vote:           Complete
+	Vote:           Done
 	Created:        05-Feb-2009
 	Post-History:
 	Discussions-To: Tcl Core List
